--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
     <title>WANZOFC TECH API</title>
     <link rel="amphtml" href="amp/index.html">
     <link rel="canonical" href="index.html">
-
-    <!-- Manifest PWA -->
-    <link rel="manifest" href="manifest.json">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.min.css">
-
     <style>
         :root {
             --bg-color: #0d1117;
@@ -277,12 +271,12 @@
             color: var(--dark-mode-toggle-color);
         }
 
-        /* Style untuk card install aplikasi */
-        #install-app-card {
+        /* Style untuk card music player */
+        #music-player-card {
             margin-bottom: 20px;
         }
 
-        #install-app-button {
+        #music-player {
             width: 100%;
         }
 
@@ -344,7 +338,7 @@
     <div id="particles-js" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;"></div>
     <audio id="backgroundAudio" loop autoplay muted>
         <source src="https://files.catbox.moe/yizd1x.mp3" type="audio/mpeg">
-    </audio>
+        </audio>
     <div class="content">
         <div class="jumbotron text-center">
             <h1 class="display-4 animate__animated animate__fadeInDown">WANZOFC TECH API</h1>
@@ -359,16 +353,17 @@
         <div class="row justify-content-center">
            <!-- Card Forum sudah dihilangkan dari sini -->
         </div>
-        <!-- Container "Install Aplikasi" -->
          <div class="row justify-content-center">
             <div class="col-md-8">
-                <div class="card" id="install-app-card">
+                <div class="card" id="music-player-card">
                     <div class="card-body">
-                        <h5 class="card-title">Instal Aplikasi</h5>
-                        <p class="card-text">Dapatkan pengalaman yang lebih baik dengan menginstal aplikasi kami.</p>
-                        <button class="btn btn-primary" id="install-app-button">
-                            Install Sekarang <i class="fas fa-download"></i>
-                        </button>
+                        <h5 class="card-title">my songs </h5>
+                        <audio id="music-player" src="https://files.catbox.moe/yizd1x.mp3" controls></audio>
+                        <div class="mt-2">
+                            <button id="play-pause-button" class="btn btn-primary">
+                                <i class="fas fa-play"></i> 
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -484,8 +479,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.all.min.js"></script>
 
     <script>
         particlesJS('particles-js', {
@@ -658,90 +651,6 @@
             });
         });
     </script>
-       <script>
-        let deferredInstallPrompt = null;
-        const installButton = document.getElementById('install-app-button');
-
-        window.addEventListener('beforeinstallprompt', (e) => {
-            // Mencegah Chrome 67 dan yang lebih lama agar tidak secara otomatis memunculkan prompt
-            e.preventDefault();
-            // Simpan event agar nanti dapat digunakan.
-            deferredInstallPrompt = e;
-            // Tampilkan tombol install
-            installButton.style.display = 'block';
-        });
-
-        installButton.addEventListener('click', async () => {
-            if (deferredInstallPrompt !== null) {
-                // Tampilkan prompt install
-                deferredInstallPrompt.prompt();
-                // Tunggu respons pengguna
-                const { outcome } = await deferredInstallPrompt.userChoice;
-                // (Opsional) Kirim analitik dengan outcome yang telah dipilih
-                console.log(`User response to the install prompt: ${outcome}`);
-                // Kita hanya dapat menggunakannya sekali, hilangkan referensi
-                deferredInstallPrompt = null;
-                // Sembunyikan tombol install
-                installButton.style.display = 'none';
-            }
-        });
-
-    // Service Worker Registration
-    if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-            navigator.serviceWorker.register('/service-worker.js')
-                .then((registration) => {
-                    console.log('Service Worker terdaftar: ', registration);
-                })
-                .catch((error) => {
-                    console.log('Registrasi Service Worker gagal: ', error);
-                });
-
-            // Verifikasi Pemuatan Manifest (Opsional)
-            fetch('manifest.json')
-            .then(response => {
-                if (!response.ok) {
-                throw new Error(`Gagal memuat manifest: ${response.status}`);
-                }
-                return response.json();
-            })
-            .then(manifest => {
-                console.log('Manifest berhasil dimuat:', manifest);
-                // Anda dapat melakukan sesuatu dengan data manifest di sini, jika diperlukan
-            })
-            .catch(error => {
-                console.error('Error memuat manifest:', error);
-            });
-
-        });
-    }
-
-    // Event Listener untuk Setelah PWA Diinstal
-    window.addEventListener('appinstalled', (event) => {
-        console.log('PWA berhasil diinstal');
-        // Menampilkan Notifikasi SweetAlert2
-        Swal.fire({
-            title: 'Aplikasi Berhasil Diinstal!',
-            text: 'Anda sekarang dapat menggunakan WANZOFC TECH API secara offline.',
-            icon: 'success',
-            confirmButtonText: 'Siip!',
-            background: 'var(--message-bg)',
-            color: 'var(--message-text-color)',
-            confirmButtonColor: 'var(--primary-color)',
-            timer: 5000, // Notifikasi akan tertutup secara otomatis setelah 5 detik
-            showClass: {
-                popup: `
-                animate__animated animate__fadeInDown
-                `
-            },
-            hideClass: {
-                popup: `
-                animate__animated animate__fadeOutUp
-                `
-            }
-        });
-    });
-</script>
    <script>
 $(document).ready(function() {
     const messagesContainer = $('#messages-container');
@@ -846,7 +755,7 @@ $(document).ready(function() {
     });
 }
 
-        sendButton.click(function() {
+    sendButton.click(function() {
         const messageText = messageInput.val();
         const file = fileInput[0].files[0];
         const replyToId = replyToIdInput.val(); // ambil ID pesan yang di balas
@@ -877,6 +786,22 @@ $(document).ready(function() {
     loadMessages();
     setInterval(loadMessages, 5000);
 });
+    </script>
+     <script>
+        $(document).ready(function() {
+            const audio = document.getElementById('music-player');
+            const playPauseButton = $('#play-pause-button');
+
+            playPauseButton.click(function() {
+                if (audio.paused) {
+                    audio.play();
+                    playPauseButton.html('<i class="fas fa-pause"></i> ');
+                } else {
+                    audio.pause();
+                    playPauseButton.html('<i class="fas fa-play"></i> ');
+                }
+            });
+        });
     </script>
 </body>
 </html>
