--- a/index.html
+++ b/index.html
@@ -400,6 +400,16 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-4 mb-4 animate__animated animate__fadeInUp animate__delay-2s card-wrapper">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">GPT3 AI</h5>
+                        <p class="card-text">Berinteraksi dengan Meta Llama model.</p>
+                        <a href="/api/ai/gpt3?prompt=kamu adalah wanzofc&content=hi"
+                            class="btn btn-primary">Coba Sekarang <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-4 mb-4 animate__animated animate__fadeInUp animate__delay-1s card-wrapper">
                 <div class="card">
                     <div class="card-body">
